# setupflow.yaml

appId: org.vechain.veworld.app
env:
    AMOUNT: 0.01
    ACCOUNT: "0x435933c8064b4Ae76bE665428e0307eF2cCFBD68"

---
- launchApp:
      clearState: true

## welcome screen
- extendedWaitUntil:
      visible:
          id: "dev_demo"
      timeout: 30000
- tapOn:
      id: "dev_demo"
- runFlow:
      when:
          visible:
              id: "button_notifications_enable"
      commands:
          - tapOn:
                id: "button_notifications_skip"
- extendedWaitUntil:
      visible:
          id: "settings-tab"
- tapOn:
      id: "settings-tab"
- extendedWaitUntil:
      visible:
          id: "Networks"
      timeout: 10000
- tapOn:
      id: "Networks"
- extendedWaitUntil:
      visible:
          id: "NetworkBox_mainnet"
- tapOn:
      id: "NetworkBox_mainnet"
- extendedWaitUntil:
      visible:
          id: "NetworkBox_testnet"
- tapOn:
      id: "NetworkBox_testnet"
- extendedWaitUntil:
      visible:
          id: "wallet-tab"
- tapOn:
      id: "wallet-tab"
- extendedWaitUntil:
      visible:
          id: "BalanceScreen_WalletManagementButton"
- tapOn:
      id: "BalanceScreen_WalletManagementButton"
- runFlow:
      when:
          visible:
              id: "SelectAccountBottomSheet_SettingsButtonIcon"
      commands:
          - tapOn:
                id: "SelectAccountBottomSheet_SettingsButtonIcon"
- extendedWaitUntil:
      visible:
          id: "Wallet_Management_AddWallet"
      timeout: 10000
- tapOn:
      id: "Wallet_Management_AddWallet"
- extendedWaitUntil:
      visible:
          id: "CreateOrImportWalletBottomSheet_CreateNewButton"
      timeout: 10000
- tapOn:
      id: "CreateOrImportWalletBottomSheet_CreateNewButton"
- repeat:
      times: 6
      commands:
          - tapOn:
                id: "numpad-1"
- extendedWaitUntil:
      visible:
          id: "Backup_later_button"
      timeout: 10000
- tapOn:
      id: "Backup_later_button"
- tapOn:
      id: "wallet-tab"
- tapOn:
      id: "BalanceScreen_WalletManagementButton"
      retryTapIfNoChange: false
- runFlow:
      commands:
          - tapOn:
                id: "selectAccount"
                index: 0
