#dappMughshotAppStateActive
appId: org.vechain.veworld.app
onFlowComplete:
    - runFlow: ../setup_reset/resetApp.yaml
env:
    MUGSHOT_DEEPLINK: "https://www.veworld.com/discover/browser/ul/https%3A%2F%2Fmugshot.vet"
---
- launchApp:
      clearState: true
- tapOn:
      id: "dev_demo"
- runFlow:
      when:
          visible:
              id: "button_notifications_enable"
      commands:
          - tapOn:
                id: "button_notifications_skip"
- assertVisible:
      id: "BalanceScreen_Header"
- openLink: ${MUGSHOT_DEEPLINK}
- assertVisible: "Mugshot"
- tapOn:
    id: "URL-bar-back-button-wrapper"
