#nftsAppClosed
appId: org.vechain.veworld.app
onFlowComplete:
    - runFlow: ../setup_reset/resetApp.yaml
env:
    NFTS_DEEPLINK: "https://www.veworld.com/nfts"
---
- launchApp:
      clearState: true
- tapOn:
      id: "dev_demo"
- runFlow:
      when:
          visible:
              id: "button_notifications_enable"
      commands:
          - tapOn:
                id: "button_notifications_skip"
- assertVisible:
      id: "BalanceScreen_Header"
- stopApp
- openLink: ${NFTS_DEEPLINK}
- repeat:
    times: 6
    commands:
      - tapOn:
          id: "numpad-1"
- assertVisible:
      id: "CollectionsScreen"
